--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "proxy": "https://api.warrenbuffetttest500.site",
   "eslintConfig": {
     "extends": [
       "react-app",
